@@ -199,6 +199,20 @@
   margin-right: 0px;
   padding-right: 20px;
 }
+.widgets-php .sidebars-column-1 .custom-sidebars-add-new {
+  background-color: #fff;
+  padding: 15px;
+}
+.widgets-php .sidebars-column-1 .custom-sidebars-add-new p {
+  border-radius: 4px;
+  border: 3px dashed #ddd;
+  color: #777;
+  cursor: pointer;
+  font-weight: bold;
+  margin: 0;
+  padding: 90px 10px;
+  text-align: center;
+}
 .widgets-php .sidebars-column-1 .inner .custom-sidebars-upfront {
   border-radius: 4px;
   background-color: #f9c200;
